Bug 447573 - Desktop shows empty icons for files with unknown mimetypes
Summary: Desktop shows empty icons for files with unknown mimetypes
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-27 13:11 UTC by Fushan Wen
Modified: 2021-12-29 08:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
empty.png (19.49 KB, image/png)
2021-12-27 13:11 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2021-12-27 13:11:41 UTC
Created attachment 144894 [details]
empty.png

SUMMARY
If a file on the desktop has an unknown mimetype, the icon of the file will be empty on the desktop.


STEPS TO REPRODUCE
1. Save a workspace file from VSCode to the desktop
2. Observe file items on the desktop

OBSERVED RESULT
Empty icon

EXPECTED RESULT
At least shows an unknown icon.

SOFTWARE/OS VERSIONS
Information for package plasma5-desktop:
----------------------------------------
Repository     : unstable-kde-frameworks
Name           : plasma5-desktop
Version        : 5.23.80git.20211226T013652~cb2e95835-ku.110.1
Arch           : x86_64
Vendor         : obs://build.opensuse.org/KDE:Unstable
Installed Size : 8.5 MiB
Installed      : Yes
Status         : up-to-date
Source package : plasma5-desktop-5.23.80git.20211226T013652~cb2e95835-ku.110.1.src
Summary        : The KDE Plasma Workspace Components
Comment 2 Bug Janitor Service 2021-12-29 01:04:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/688
Comment 3 Bug Janitor Service 2021-12-29 02:32:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kguiaddons/-/merge_requests/38
Comment 4 Fushan Wen 2021-12-29 08:34:26 UTC
Git commit 7b6c53f5b2f53eb0dd05c09bc803f2d36f1aba4f by Fushan Wen.
Committed on 29/12/2021 at 04:05.
Pushed by fusionfuture into branch 'master'.

Add KIconUtils::addOverlays() overload to allow passing QIcon and QStringList

This is required if the application wants to use a fallback icon.

M  +32   -20   src/util/kiconutils.cpp
M  +18   -0    src/util/kiconutils.h

https://invent.kde.org/frameworks/kguiaddons/commit/7b6c53f5b2f53eb0dd05c09bc803f2d36f1aba4f
Comment 5 Fushan Wen 2021-12-29 08:35:07 UTC
Git commit b7e0934d81f3d5d08a1b3b3d7c75b2e411ac04f8 by Fushan Wen.
Committed on 29/12/2021 at 02:35.
Pushed by fusionfuture into branch 'master'.

kdirmodel: Return "unknown" icon when the icon is null

The behavior is the same as that of KStandardItemListWidget in Dolphin,
so the fallback icon will show on the item if the icon is a null icon.

M  +1    -1    src/widgets/kdirmodel.cpp

https://invent.kde.org/frameworks/kio/commit/b7e0934d81f3d5d08a1b3b3d7c75b2e411ac04f8