foldermodel: Show "unknown" icon when the icon is null

The behavior is the same as that of KStandardItemListWidget in Dolphin,
so fallback icon will show on the item if KDirModel returns a null icon.

BUG: 447573